--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ body {
   font-family: 'Fredoka One', 'Nunito', sans-serif;
   font-size: 2.3em;
   color: #65bc69;
+  font-weight: 600;
   letter-spacing: 2px;
   text-shadow: 2px 2px 0 #f9d97399;
   position: relative;
@@ -231,7 +232,7 @@ li.fase-item {
 <div class="cute-wrap">
   <div class="cute-header">
     <p class="cute-neko">🐱</p>
-    <p>ねこぢる大研究</p>
+    <p>猫は自分で毛づくろいするんだよ！</p>
   </div>
   <div class="cute-fumetto">
     RESET CASA – Lista Super Cute con Tempi & Note
