--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="it">
 <head>
 <meta charset="UTF-8">
-<title>Checklist Reset Casa – Cute Neko Style</title>
+
+<title>Kyuuto Neko Chekkurisuto - キュートねこチェックリスト</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One|Nunito:400,700&display=swap');
