--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 
 <title>Kyuuto Neko Chekkurisuto - キュートねこチェックリスト</title>
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 @import url('https://fonts.googleapis.com/css?family=Fredoka+One|Nunito:400,700&display=swap');
