--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body {
   gap: 0;
   margin: 0;
   padding: 2.2em 1em 0.2em 1em;
-  font-family: 'Fredoka One', 'Nunito', sans-serif;
+  font-family: 'Fredoka One', 'Nunito', cursive;
   font-size: 2.3em;
   color: #65bc69;
   font-weight: 600;
@@ -233,7 +233,16 @@ li.fase-item {
 <body>
 <div class="cute-wrap">
   <div class="cute-header">
-    <p class="cute-neko">🐱</p>
+    <svg class="cute-neko" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64" width="1em" height="1em" aria-label="Cute Neko" role="img">
+  <circle cx="32" cy="32" r="28" fill="#fffbe8" stroke="#f7c963" stroke-width="3"/>
+  <ellipse cx="32" cy="38" rx="15" ry="13" fill="#ffeabf"/>
+  <polygon points="16,22 12,10 24,20" fill="#ffeabf" />
+  <polygon points="48,22 52,10 40,20" fill="#ffeabf" />
+  <circle cx="25" cy="38" r="3" fill="#765348"/>
+  <circle cx="39" cy="38" r="3" fill="#765348"/>
+  <ellipse cx="32" cy="44" rx="5" ry="3" fill="#ff82b0"/>
+  <rect x="26" y="28" width="12" height="4" rx="2" fill="#fff"/>
+</svg>
     <p>猫は自分で毛づくろいするんだよ！</p>
   </div>
   <div class="cute-fumetto">
